# opengl-basic

./: CMakeLists.txt  README.md
res/shaders/: basic.glsl
src/: IndexBuffer.cpp  IndexBuffer.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.cpp  VertexBufferLayout.h  main.cpp
src/tests/: Test.cpp  Test.h  TestClearColor.cpp  TestClearColor.h  TestTexture2D.cpp  TestTexture2D.h
